# llm_query_doc_analyser

./: .coverage  .env.example  .gitignore  CHANGES_SUMMARY.md  CONSOLE_LOGGING_CONTROL.md  EXPLANATION_TRACKING_LOGIC.md  FILTERING_DATABASE_REFACTOR.md  FILTER_REFACTORING.md  LICENSE  LOGGING_ENHANCEMENTS_SUMMARY.md  LOGGING_MIGRATION.md  PDF_DOWNLOAD_REFACTORING.md  PDF_REFACTORING_SUMMARY.md  PDF_TESTING_GUIDE.md  Project Development Checklist.md  README.md  pyproject.toml  verify_api_improvements.py  verify_test_environment.py
.github/: copilot-instructions.md
docs/: IMPLEMENTATION_SUMMARY.md  IMPORT_UPDATE.md  PRE_COMMIT_CHECKLIST.md  QUICK_REFERENCE.md  arxiv_cache_busting_fix.md  arxiv_fix_summary.md  auto_enrichment_flow_diagrams.md  bugfix_event_loop_lock.md  event_loop_lock_recreation_diagram.md  file_size_tracking_implementation.md  integration_tests_feasibility.md  markdown_versions_schema_design.md  pdf_download_improvements.md  sample_import.csv  sample_import_example.xlsx  test_environment_feature.md
src/llm_query_doc_analyser/: cli.py
src/llm_query_doc_analyser/core/: config.py  hashing.py  models.py  store.py
src/llm_query_doc_analyser/enrich/: arxiv.py  crossref.py  europepmc.py  openalex.py  orchestrator.py  preprint_detection.py  preprint_providers.py  pubmed.py  semanticscholar.py  unpaywall.py  version_linking.py
src/llm_query_doc_analyser/filter_rank/: README.md  __init__.py  embed.py  prompts.py  rerank.py  rules.py
src/llm_query_doc_analyser/io_/: export.py  load.py
src/llm_query_doc_analyser/migrations/: add_citation_fields.py  rename_records_to_research_articles.py
src/llm_query_doc_analyser/pdfs/: download.py  download_html.py  html_urls.py  resolve.py
src/llm_query_doc_analyser/utils/: files.py  html_to_markdown.py  http.py  log.py  provenance.py  trial_query_preprint_published_version.py
tests/: test_enrich.py  test_filter.py  test_hashing.py  test_import_research_articles.py  test_load.py  test_pdfs.py  test_preprint_tracking.py  test_rate_limiter.py
